--- a/BtcMarkets/BtcMarkets.Wallet/Themes/DarkTheme.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Themes/DarkTheme.xaml
@@ -34,6 +34,8 @@
     <Color x:Key="DefaultTextColor">#F2F3F4</Color>
     <Color x:Key="DefaultHeaderColor">#ffffff</Color>
 
+    <Color x:Key="DefaultHintColor">#DCDCDC</Color>
+    
     <Color x:Key="SeparatorColor">#EAEDED</Color>
     <Color x:Key="HighlightBackgroundColor">#ffAA55</Color>
     <Color x:Key="HighlightTextColor">#F2F4F4</Color>
